# penta_real_esrgan

./: .gitignore  README.md  pyproject.toml
front/: index.html
front/src/: style.css
front/src/components/Area/: AreaHeader.vue  AreaMain.vue
front/src/components/Parts/: PostBackendImage.vue  PostBackendVideo.vue
penta_real_esrgan/: inference_realesrgan.py  inference_realesrgan_penta.py  inference_realesrgan_video.py  inference_realesrgan_video_penta.py  main.py  pre.py
penta_real_esrgan/templates/: index.html
penta_real_esrgan/templates/static/: penta_real_esrgan.css  penta_real_esrgan.js
